# orbit

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  species_divisions.json
data/: seed_groups.json  seeds.txt  species_names.tsv  tax_group.tsv
results/: benchmark_runtime.json  evaluation_basic_procrustes_new_n2v.json  evaluation_basic_procrustes_new_n2v_within.json  evaluation_proc_jaccard_iter_csls.json  evaluation_proc_jaccard_iter_csls_within.json  evaluation_procrustes_n2v.json  evaluation_raw_n2v_within.json  evaluation_space_v2.json  evaluation_space_v2_within.json  evaluation_vanilla_v2.json  evaluation_within_species_procrustes_n2v.json  seed_selection.json  statistical_tests_mannwhitney.json  statistical_tests_wilcoxon.json
results/downstream/: comparison_summary.json  go_transfer_cafa.json
results/supplementary/: figS3_subloc_mcc_per_compartment.csv  figS4_per_species_go_transfer.csv  figS5_jaccard_csls_ablation.csv  figS6_data.csv  (+7 more)
scripts/: benchmark_runtime.py  compute_jaccard_matrices.py  compute_statistical_tests.py  eval_raw_n2v_within.py  evaluate.py  evaluate_func_pred.py  evaluate_go_transfer.py  evaluate_subloc.py  example_embed_seeds.py  find_best_orthogroups.py  make_header_image.py  plot_figure3_panels.py  plot_panel_d.py  plot_umap_153_pub.py  plot_umap_orthogroup_composite.py  prepare_data.py  run_alignment.py  run_improved_procrustes.py  run_jaccard_improvement.py  run_procrustes_alignment.py  select_seeds.py  validate_seeds.py  visualize_evaluation.py
tests/: test_data_prep.py  test_seed_selection.py
(+108 files in other folders)
